creusot/tests/should_fail/prusti/index_invalid.stderr
error: expected `std::vec::Vec<_, _>` found `creusot_contracts::prusti::Zombie<std::vec::Vec<T>>`
 --> index_invalid.rs:5:22
  |
5 | #[ensures(*result == old(*v)@[0])]
  |                      ^^^^^^^

error: aborting due to 1 previous error

